--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,10 @@
 amqp==2.3.2
 billiard==3.5.0.5
 celery==4.2.1
+channels==2.2.0
+channels-redis==2.4.0
 Django==2.2
-django-redis-cache==1.8.1
+django-redis==4.10.0
 djangorestframework==3.9.0
 djangorestframework-jwt==1.11.0
 kombu==4.2.1
