--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,6 +4,7 @@ celery==4.2.1
 channels==2.2.0
 channels-redis==2.4.0
 Django==2.2
+django-cors-headers==2.5.3
 django-redis==4.10.0
 djangorestframework==3.9.0
 djangorestframework-jwt==1.11.0
@@ -15,3 +16,4 @@ pytz==2018.9
 redis==3.2.0
 rest-condition==1.0.3
 vine==1.1.4
+websockets==7.0
