--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,11 +3,18 @@ billiard==3.5.0.5
 celery==4.2.1
 channels==2.2.0
 channels-redis==2.4.0
-Django==2.2
+daphne==2.2.5
+Django==2.2.4
 django-cors-headers==2.5.3
 django-redis==4.10.0
+django-storages==1.7.1
 djangorestframework==3.9.0
 djangorestframework-jwt==1.11.0
+google-api-core==1.5.2
+google-auth==1.6.1
+google-cloud-core==0.28.1
+google-cloud-storage==1.13.0
+googleapis-common-protos==1.5.5
 kombu==4.2.1
 Pillow==5.4.0
 psycopg2==2.7.3
